KAN-33: changed dark mode theme and fixed styling issues with the previewer

--- a/code/frontend/src/index.css
+++ b/code/frontend/src/index.css
@@ -6,44 +6,13 @@ body {
   height: 100vh;
 }
 
-@font-face {
-  font-family: 'Fira Code';
-  src: url('/fonts/FiraCode-Light.woff2') format('woff2');
-  font-weight: 300;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: url('/fonts/FiraCode-Regular.woff2') format('woff2');
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: url('/fonts/FiraCode-Medium.woff2') format('woff2');
-  font-weight: 500;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: url('/fonts/FiraCode-SemiBold.woff2') format('woff2');
-  font-weight: 600;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: url('/fonts/FiraCode-Bold.woff2') format('woff2');
-  font-weight: 700;
-  font-display: swap;
-}
 
 .toast-position {
   top: 5rem !important;
 }
+
+/* select */
+
 /* input:focus, textarea:focus, */
 .form-select:focus {
   outline: none !important;
@@ -51,16 +20,37 @@ body {
   box-shadow: none !important;
 }
 
+/* table for markdown preview */
+
 table {
   border-collapse: collapse;
-  width: 100%;
   margin: 1rem auto;
+  display: block;
+  width: 100%;
+  overflow: auto;
+  word-break: normal;
+  word-break: keep-all;
 }
 
 th, td {
-  border: 1px solid #333;
-  padding: 12px;
+  padding: 6px 13px !important;
+  border: 1px solid #ddd;
+  text-align: left;
 }
+
+tr {
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.dark tr {
+  background-color: #5f5f5f;
+  border-top: 1px solid #ccc;
+}
+
+
+/* select for editor status bar */
 
 .form-select, .form-select option {
   width: 100%;
@@ -72,6 +62,13 @@ th, td {
 
 }
 
+.prose {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 
 .dark .form-select, .dark .form-select option {
   color: white;
@@ -79,11 +76,14 @@ th, td {
   border: none;
 }
 
+/* image preview in markdown */
 
 .prose img {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* links preview in markdown */
 
 .prose a {
   color: #337ab7;
@@ -98,6 +98,8 @@ th, td {
 .dark .prose a {
   color: #5EB7E0;
 }
+
+/* list styling */
 
 .prose ul {
   list-style-type: disc !important;
@@ -140,7 +142,7 @@ th, td {
 }
 
 .header-anchor {
-  visibility: hidden;
+  /* visibility: hidden; */
   opacity: 0;
   text-decoration: none !important;
   color: inherit;
@@ -148,6 +150,10 @@ th, td {
   align-items: center;
   transition: visibility 0.2s, opacity 0.2s;
   color: white !important;
+  float: left;
+  padding-right: 4px;
+  margin-top: 12px;
+  margin-left: -26px;
 }
 
 h1:hover .header-anchor,
@@ -160,6 +166,11 @@ h6:hover .header-anchor {
   opacity: 1;
 }
 
+.header-anchor:hover {
+  visibility: visible;
+}
+
+/* Code block styling */
 
 .prose code.inline-code {
   color: var(--tw-prose-pre-code);
